--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,15 +139,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
+#image_height {
     max-height: 200px;
 }
 
