updated CSS as I realized that class selectors only need to be labeled by class and then contained element only

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,11 +84,11 @@ p {
     margin-right: 25px;
 }
 
-.content div img {
+.content img {
     max-height: 200px;
 }
 
-.content div h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
